--- a/wode/wo/css/swiper.css
+++ b/wode/wo/css/swiper.css
@@ -9,7 +9,8 @@
   overflow: hidden;
   float: left;
 }
-.item img{width: 100%;display: block;height: 100%;}
+.item img{width: 100%;display: block;height:3.2rem;}
+.swiper{height: 3.2rem;}
 .swiper-container{
   position: relative;
   overflow: hidden;
