--- a/wode/application/index/view/login/index.html
+++ b/wode/application/index/view/login/index.html
@@ -6,7 +6,7 @@
 	    <meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="format-detection" content="telephone=no" />
 		<title>
-			用户中心
+			用户登录
 		</title>
 		<script>
 			window.onresize = function(){
@@ -23,9 +23,9 @@
 			getscreen();
 		</script>
 		<link rel="stylesheet" href="/public/static/index/css/style.css?t=201766" />
+		<link rel="stylesheet" href="/public/static/index/css/register.css?t=201766" />
 		
-		
-		<style type="text/css">
+		<!--<style type="text/css">
 			html{background: #f0f0f0;}
 			.login_box{overflow: hidden;}
 			label{display: block;background: #fff;height: 40px;margin:20px 0.3rem;border-radius: 5px;border:1px solid #f0f0f0;}
@@ -38,27 +38,33 @@
 			.login_btn.focus{background: #ccc;color: #fff;}
 			p{padding: 0 0.3rem;overflow: hidden;}
 			p a{float: right;text-decoration: underline;font-size: 12px;}
-			p span{color:red;font-size: 12px;padding-left:5px;}
-		</style>
+			p span{color:red;font-size: 12px;padding-left:5px;display: none;}
+		</style>-->
 		<script type="text/javascript" src="/public/static/index/js/jquery-2.1.0.js" ></script>
 	</head>
 	<body>
-		<div class="login_box">						
-			<label>
-				<input type="text" placeholder="请输入用户名" />
-				<i></i>
-			</label>			
-			<label>
-				<input type="text" placeholder="请输入密码" />
+			<div class="login_box">						
+				<label class="user">
+				<input type="text" name="user" placeholder="请输入用户名" maxlength="16"/>
 				<i></i>
 			</label>
-			<p>
-				<span>错误</span>
-				<a href="javascript:;">暂无账户，去注册</a>
+			
+			<label class="pass">
+				<input type="password" name="pass" maxlength="6" placeholder="请输入密码" />
+				<i></i>
+			</label>
+			<p class="errortips">
+				<span></span>
+				<a href="{:url('index/login/register')}">暂无账户，去注册</a>
 			</p>
 			<div class="login_btn">
 				登录
 			</div>
 		</div>
+		<script type="text/javascript">
+			var URL ='{:url("/index/login/login")}';
+		</script>
+		<script type="text/javascript" src="/public/static/index/js/register.js" ></script>
 	</body>
+	
 </html>
