--- a/wode/application/index/view/login/register.html
+++ b/wode/application/index/view/login/register.html
@@ -6,7 +6,7 @@
 	    <meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="format-detection" content="telephone=no" />
 		<title>
-			用户中心
+			用户注册
 		</title>
 		<script>
 			window.onresize = function(){
@@ -23,41 +23,35 @@
 			getscreen();
 		</script>
 		<link rel="stylesheet" href="/public/static/index/css/style.css?t=201766" />
-		
-		
-		<style type="text/css">
-			html{background: #f0f0f0;}
-			body{overflow: hidden;clear:both;}
-			label{display: block;background: #fff;height: 40px;margin:20px 0.3rem;border-radius: 5px;border:1px solid #f0f0f0;}
-			label.focus{border:1px solid red;}
-			label.focus i{float: right;width:6px;height: 6px;background: red;border-radius: 6px;margin:17px 10px;}
-			label.focus input{color: red;}
-			
-			input{border: none;background: transparent;height: 100%;}
-			.login_btn{border-radius:5px;width: 6rem;margin:20px auto;background:#4191e8;color: #fff;text-align: center;line-height: 40px;height: 40px;}
-			.login_btn.focus{background: #ccc;color: #fff;}
-			p{padding: 0 0.3rem;overflow: hidden;}
-			p a{float: right;text-decoration: underline;font-size: 12px;}
-			p span{color:red;font-size: 12px;padding-left:5px;}
-		</style>
-		<script type="text/javascript" src="js/jquery-2.1.0.js" ></script>
+		<link rel="stylesheet" href="/public/static/index/css/register.css?t=201766" />
+		<script type="text/javascript" src="/public/static/index/js/jquery-2.1.0.js" ></script>
 	</head>
 	<body>
-		<label>
-			<input type="text" placeholder="请输入用户名" />
+		<label class="user">
+			<input type="text" name="user" placeholder="请输入用户名" maxlength="16"/>
 			<i></i>
 		</label>
 		
-		<label>
-			<input type="text" placeholder="请输入密码" />
+		<label class="pass">
+			<input type="text" name="pass" maxlength="6" placeholder="请输入密码" />
 			<i></i>
 		</label>
-		<p>
-			<span>错误</span>
-			<a href="javascript:;">已有账户，去登录</a>
+		<p class="errortips">
+			<span></span>
+			<a href="{:url('index/login/index')}">已有账户，去登录</a>
 		</p>
+		
 		<div class="login_btn">
 			注册
 		</div>
+		
+		<div class="tips">
+			<p>1、账号设置为8到16位数字和字母,且必须包含字母和数字。</p>
+			<p>2、密码设置为6位。</p>			
+		</div>
+		<script type="text/javascript">
+			var URL ='{:url("/index/login/adduser")}';
+		</script>
+		<script type="text/javascript" src="/public/static/index/js/register.js" ></script>
 	</body>
 </html>
