--- a/wode/application/index/view/login/register.html
+++ b/wode/application/index/view/login/register.html
@@ -33,7 +33,7 @@
 		</label>
 		
 		<label class="pass">
-			<input type="text" name="pass" maxlength="6" placeholder="请输入密码" />
+			<input type="password" name="pass" maxlength="6" placeholder="请输入密码" />
 			<i></i>
 		</label>
 		<p class="errortips">
