--- a/wode/application/index/view/login/index.html
+++ b/wode/application/index/view/login/index.html
@@ -30,7 +30,7 @@
 	<body>
 		<div class="login_box">						
 			<label class="user">
-				<input type="text" name="user" placeholder="请输入用户名" maxlength="11" value="17602150413"/>
+				<input type="text" name="user" placeholder="请输入用户名" maxlength="11" value=""/>
 				<i></i>
 			</label>
 			<div class="pass">
